docs/envoy/v1.13.0/_sources/api-v2/config/filter/http/buffer/v2/buffer.proto.rst.txt
.. _envoy_api_file_envoy/config/filter/http/buffer/v2/buffer.proto:

Buffer
======

.. _extension_envoy.filters.http.buffer:


This extension may be referenced by the qualified name *envoy.filters.http.buffer*

.. note::
  

  This extension is intended to be robust against untrusted downstream traffic. It assumes that the upstream is trusted.

Buffer :ref:`configuration overview <config_http_filters_buffer>`.

.. _envoy_api_msg_config.filter.http.buffer.v2.Buffer:

config.filter.http.buffer.v2.Buffer
-----------------------------------

`[config.filter.http.buffer.v2.Buffer proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/config/filter/http/buffer/v2/buffer.proto#L18>`_


.. code-block:: json

  {
    "max_request_bytes": "{...}"
  }

.. _envoy_api_field_config.filter.http.buffer.v2.Buffer.max_request_bytes:

max_request_bytes
  (`UInt32Value <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#uint32value>`_, *REQUIRED*) The maximum request size that the filter will buffer before the connection
  manager will stop buffering and return a 413 response.
  
  


.. _envoy_api_msg_config.filter.http.buffer.v2.BufferPerRoute:

config.filter.http.buffer.v2.BufferPerRoute
-------------------------------------------

`[config.filter.http.buffer.v2.BufferPerRoute proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/config/filter/http/buffer/v2/buffer.proto#L27>`_


.. code-block:: json

  {
    "disabled": "...",
    "buffer": "{...}"
  }

.. _envoy_api_field_config.filter.http.buffer.v2.BufferPerRoute.disabled:

disabled
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Disable the buffer filter for this particular vhost or route.
  
  
  
  Precisely one of :ref:`disabled <envoy_api_field_config.filter.http.buffer.v2.BufferPerRoute.disabled>`, :ref:`buffer <envoy_api_field_config.filter.http.buffer.v2.BufferPerRoute.buffer>` must be set.
  
.. _envoy_api_field_config.filter.http.buffer.v2.BufferPerRoute.buffer:

buffer
  (:ref:`config.filter.http.buffer.v2.Buffer <envoy_api_msg_config.filter.http.buffer.v2.Buffer>`) Override the global configuration of the filter with this new config.
  
  
  
  Precisely one of :ref:`disabled <envoy_api_field_config.filter.http.buffer.v2.BufferPerRoute.disabled>`, :ref:`buffer <envoy_api_field_config.filter.http.buffer.v2.BufferPerRoute.buffer>` must be set.
  

